Playbooks added for storage pools changes made to RHEL builder images blueprints and templates

--- a/templates/template-stpool-1.xml.j2
+++ b/templates/template-stpool-1.xml.j2
@@ -2,5 +2,12 @@
   <name>{{ pool_name }}</name>
   <target>
     <path>{{ pool_path }}</path>
+    <permissions>
+      <mode>0770</mode>
+    </permissions>
   </target>
+  <owner>
+    <user name="root"/>
+    <group name="qemu"/>
+  </owner>
 </pool>
