--- a/templates/template-rhel-94.xml.j2
+++ b/templates/template-rhel-94.xml.j2
@@ -2,17 +2,16 @@
   <name>{{ vm_name }}</name>
   <memory unit='GiB'>{{ memory_gb }}</memory>
   <vcpu placement='static'>{{ cpu_number }}</vcpu>
-    <os>
+  <os>
     <type arch='x86_64' machine='q35'>hvm</type>
-    <boot dev='cdrom'/>
     <boot dev='hd'/>
-    </os>
-
+    <boot dev='cdrom'/>
+  </os>
   <devices>
     <controller type='pci' index='0' model='pcie-root'/>
     <disk type='file' device='disk'>
       <driver name='qemu' type='qcow2'/>
-      <source pool='{{ storagepool_name }}' file='{{ vm_name }}-vm.qcow2'/>
+      <source pool='{{ storagepool_name }}' file='/home/rhelsa/{{ storagepool_name }}/{{ vm_name }}-vm.qcow2'/>
       <target dev='vda' bus='virtio'/>
     </disk>
     <interface type='network'>
@@ -25,7 +24,15 @@
       <source file='{{ iso_path }}'/>
       <target dev='sda' bus='sata'/>
     </disk>
-    <console type='pty'/>
+    <serial type='pty'>
+    <source path='/dev/pts/2'/>
+    <target type='isa-serial' port='0'>
+        <model name='isa-serial'/>
+    </target>
+    </serial>
+    <console type='pty'>
+    <source path='/dev/pts/2'/>
+    <target type='serial'/>
+    </console>
   </devices>
-
 </domain>
