more fixes as I was so stupid to let AI check my templates... never again

--- a/templates/template-ocpstoragepool-1.xml.j2
+++ b/templates/template-ocpstoragepool-1.xml.j2
@@ -1,7 +1,7 @@
 <pool type='dir'>
-  <name>{{ pool_name }}</name>
+  <name>{{ ocp_pool_name }}</name>
   <target>
-    <path>{{ pool_path }}</path>
+    <path>{{ ocp_pool_path }}</path>
     <permissions>
       <mode>0770</mode>
     </permissions>
