--- a/templates/template-rhel-94.xml.j2
+++ b/templates/template-rhel-94.xml.j2
@@ -28,11 +28,11 @@
     </disk>
 
     <serial type='pty'>
-      <target type='serial' port='0'/>
+      <target port='0'/>
     </serial>
 
     <console type='pty'>
-      <target type='serial'/>
+      <target type='virtio'/>
     </console>
   </devices>
 </domain>
