--- a/templates/template-rhel-94.xml.j2
+++ b/templates/template-rhel-94.xml.j2
@@ -29,9 +29,11 @@
     </disk>
 
     <serial type='pty'>
+    <source path='/dev/ttyS0'/>
     <target port='0'/>
     </serial>
     <console type='pty'>
+    <source path='/dev/ttyS0'/>
     <target type='serial'/>
     </console>
 
